# fitness_advisor_pytorch

./: .gitignore  CLAUDE.md  Cargo.toml  LEPTOS_INTEGRATION.md  LEPTOS_WASM_COMPILATION.md  LEPTOS_WASM_TEST_DETAILS.md  README.md  Trunk.toml  ai_test_request.json  ai_test_request_fixed.json  batch_process.md  fitness_advisor.db  index.html  leptos_Cargo.toml  ml_analyzer_test.py  requirements.txt  start_services.sh  test_base64.txt  test_batch.sh  test_integration.rs  webSocket.md
backend/: Cargo.toml  RAG_TESTING_GUIDE.md  run_rag_tests.sh
backend/examples/: mcp_test.rs
backend/src/: config.rs  database.rs  lib.rs  main.rs  ml_client.rs  websocket.rs
backend/src/advisors/menu_optimizer/: mod.rs
backend/src/advisors/menu_optimizer/algorithm/: genetic.rs  types.rs
backend/src/ai_analytics/: mod.rs
backend/src/core/: errors.rs  metrics.rs  mod.rs
backend/src/mcp/: auth.rs  fitness_tools.rs  mod.rs  nutrition_tools.rs  protocol.rs  server.rs  transport.rs  types.rs
backend/src/models/: exercise.rs  food.rs  system.rs  workout.rs
backend/src/rag/: api.rs  document_processor.rs  embeddings.rs  knowledge_base.rs  llm_service.rs  mod.rs  search.rs  types.rs  vector_store.rs
backend/src/sample_data/: foods.rs  mod.rs  recipes.rs
backend/tests/mcp/: integration_tests.rs  mod.rs  test_auth_manager.rs  test_fitness_tools.rs  test_nutrition_tools.rs  test_protocol.rs  test_transport.rs
backend/tests/rag/: mod.rs  sample_data.rs  test_api.rs  test_document_processor.rs  test_embeddings.rs  test_integration.rs
config/: default.toml
data/: fitness_advisor.db
docs/: FRONTEND_INTEGRATION.md  HYBRID_SETUP.md  REACT_INTEGRATION_DETAILS.md  README.md
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.rs  client.ts  mod.rs  websocket.rs
frontend/src/components/: ApiTest.tsx  ErrorMonitoring.tsx  MCPErrorDisplay.tsx  Navigation.tsx  NutritionPanel.tsx  ProgressCharts.tsx  QuickActions.tsx  SeasonalOptimization.tsx  StatsCards.tsx  WebSocketStatus.tsx  WorkoutPanel.tsx  api_test.rs  icons.rs  menu_optimization.rs  navigation.rs  nutrition_panel.rs
frontend/src/utils/: mcpErrorHandler.ts
ml-services/: batch_analyzer.py  ml_analyzer.py  ml_service.py  realtime_analyzer.py  requirements.txt  test_integration.py
scripts/: start_services.sh
src/: App.tsx  Trunk.toml  api.rs  build.sh  index.html  lib.rs  main.rs  ml_client.rs  websocket.rs
src/advisors/: mod.rs
src/advisors/menu_optimizer/: data_loader.rs
src/advisors/menu_optimizer/algorithm/: mod.rs
src/ai_analytics/: motion_analyzer.rs
src/api/: client.ts  mcp_client.rs  mod.rs  rag_client.rs
src/components/: MenuOptimization.tsx  ProgressCharts.tsx  WorkoutPanel.tsx  document_manager.rs  knowledge_base_panel.rs  mcp_server_panel.rs  mod.rs  nutrition_panel.rs  progress_charts.rs  quick_actions.rs  semantic_search.rs  stats_cards.rs  workout_panel.rs
src/frontend/: app.rs  mod.rs
src/frontend/components/: menu_optimization.rs  mod.rs  navigation.rs  progress_charts.rs  quick_actions.rs  stats_cards.rs  workout_panel.rs
src/models/: mod.rs  optimization.rs  system.rs  user.rs
tests/: test_realtime.html
