[package]
name = "fitness_advisor_ai"
version = "0.1.0"
edition = "2021"
default-run = "fitness_advisor_ai"

[dependencies]
# Core ML and data processing
ndarray = "0.15"
ndarray-linalg = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web API framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Image processing (future use)
image = "0.24"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Testing
axum-test = "15.0"
