[package]
name = "fitness_advisor_ai"
version = "0.1.0"
edition = "2021"
default-run = "fitness_advisor_ai"

[dependencies]
# Core ML and data processing
ndarray = "0.15"
ndarray-linalg = "0.16"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web API framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Image processing (future use)
image = "0.24"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Base64 encoding/decoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client for ML service integration
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Configuration management
toml = "0.8"

# Menu optimization algorithms
nalgebra = "0.32"              # Linear algebra operations
rand = "0.8"                   # Random number generation for genetic algorithms
rand_distr = "0.4"             # Statistical distributions
rayon = "1.7"                  # Parallel processing for optimization
async-trait = "0.1"            # Async traits for optimization algorithms

# Testing
axum-test = "15.0"
