[package]
name = "fitness_advisor_ai"
version = "0.1.0"
edition = "2021"
default-run = "fitness_advisor_ai"

[lib]
name = "fitness_advisor_frontend"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fitness_advisor_ai"
path = "src/backend/main.rs"

[features]
hydrate = ["leptos/hydrate"]
default = []

[dependencies]
# Serialization (needed for both backend and frontend)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Frontend Framework (Leptos WebAssembly)
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Backend-only dependencies (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
image = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
toml = "0.8"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.7"
async-trait = "0.1"
axum-test = "15.0"
# Core ML and data processing and Database
ndarray = "0.15"
ndarray-linalg = "0.16"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
